--- a/client.css
+++ b/client.css
@@ -37,7 +37,7 @@ video {
     background: #222;
     margin: 0 0 20px 0;
     width: 49%;
-    height: auto;
+    height: 470px;
     border-radius: 4px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
