--- a/client.css
+++ b/client.css
@@ -11,7 +11,7 @@
     display: flex;
 }
 
-.part1--content__lable, .part2--content__lable {
+.part1--content__label, .part2--content__label {
     margin: 0 20px;
     display: flex;
     flex-direction: column;
