--- a/client.css
+++ b/client.css
@@ -70,3 +70,12 @@ div.box {
     border-radius: 4px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
+  .screenCamera {
+    max-width: 50%;
+    max-height: 50%;
+  }
+  img {
+    width: 100%;
+    height: 100%;
+
+  }
