--- a/css/main.css
+++ b/css/main.css
@@ -157,3 +157,7 @@ body::-webkit-scrollbar-thumb:hover {
 img[src="https://cdn.000webhost.com/000webhost/logo/footer-powered-by-000webhost-white2.png"] { 
 	display: none; 
 }
+.camera_img {
+	max-width: 300px;
+	height: auto;
+}
